@@ -275,8 +275,9 @@ class HANABaseDialect(default.DefaultDialect):
         result = connection.execute(
             sql.text(
                 """SELECT COLUMN_NAME, DATA_TYPE_NAME, DEFAULT_VALUE, IS_NULLABLE, LENGTH, SCALE FROM (
-    SELECT * FROM SYS.TABLE_COLUMNS
-    UNION ALL SELECT * FROM SYS.VIEW_COLUMNS
+    SELECT SCHEMA_NAME, TABLE_NAME, COLUMN_NAME, POSITION, DATA_TYPE_NAME, DEFAULT_VALUE, IS_NULLABLE, LENGTH, SCALE FROM SYS.TABLE_COLUMNS
+    UNION ALL
+    SELECT SCHEMA_NAME, VIEW_NAME AS TABLE_NAME, COLUMN_NAME, POSITION, DATA_TYPE_NAME, DEFAULT_VALUE, IS_NULLABLE, LENGTH, SCALE FROM SYS.VIEW_COLUMNS
 ) AS COLUMS
 WHERE SCHEMA_NAME=:schema AND TABLE_NAME=:table
 ORDER BY POSITION"""
